<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright © 2019-2022 Forb Yuan
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>win.doyto</groupId>
        <artifactId>doyto-oss-parent</artifactId>
        <version>2</version>
    </parent>

    <artifactId>doyto-query-parent</artifactId>
    <name>DoytoQuery</name>
    <packaging>pom</packaging>
    <version>${revision}</version>
    <url>https://query.doyto.win/</url>

    <properties>
        <revision>2.0.0-SNAPSHOT</revision>

        <java.version>17</java.version>
        <spring-boot.version>3.0.0-RC2</spring-boot.version>
        <snakeyaml.version>1.33</snakeyaml.version>

        <sourceDirectory>src/main/java</sourceDirectory>
        <skipDeploy>false</skipDeploy>

        <jacoco.destFile>${user.dir}/target/jacoco.exec</jacoco.destFile>
        <jacoco.dataFile>${user.dir}/target/jacoco.exec</jacoco.dataFile>
    </properties>

    <modules>
        <module>doyto-query-test</module>
        <module>doyto-query-geo</module>
        <module>doyto-query-api</module>
        <module>doyto-query-common</module>
        <module>doyto-query-memory</module>
        <module>doyto-query-sql</module>
        <module>doyto-query-web-common</module>
        <module>doyto-query-web</module>
        <module>doyto-query-jdbc</module>
        <module>doyto-query-integration-test</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>win.doyto</groupId>
                <artifactId>doyto-query-api</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>win.doyto</groupId>
                <artifactId>doyto-query-common</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>win.doyto</groupId>
                <artifactId>doyto-query-sql</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>win.doyto</groupId>
                <artifactId>doyto-query-test</artifactId>
                <version>${revision}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>SpringBoot</id>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
    </repositories>

    <build>
        <sourceDirectory>${sourceDirectory}</sourceDirectory>
        <testResources>
            <testResource>
                <directory>./src/test/java</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/*.json</include>
                </includes>
            </testResource>
            <testResource>
                <directory>./src/test/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/*.yml</include>
                    <include>**/*.sql</include>
                    <include>**/*.xml</include>
                    <include>**/*.json</include>
                    <include>**/*.properties</include>
                </includes>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <release>17</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>2.5.2</version>
                <configuration>
                    <skip>${skipDeploy}</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
                <configuration>
                    <skip>${skipDeploy}</skip>
                </configuration>
            </plugin>

            <!-- 更新pom版本号-->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.2.7</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>bom</flattenMode>
                    <flattenedPomFilename>target/${project.artifactId}.pom.xml</flattenedPomFilename>
                    <pomElements>
                        <version>resolve</version>
                        <properties>resolve</properties>
                        <dependencies>resolve</dependencies>
                        <pluginManagement>resolve</pluginManagement>
                    </pomElements>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <scm>
        <tag>master</tag>
        <url>git@github.com:f0rb/doyto-query.git</url>
        <connection>scm:git:git@github.com:f0rb/doyto-query.git</connection>
        <developerConnection>scm:git:git@github.com:f0rb/doyto-query.git</developerConnection>
    </scm>
</project>